--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <ul>
+    <li><%= link_to "home", root_path %></li>
+    <li><%= link_to "index", welcome_about_path %></li>
+  </ul>
 <%= yield %>
 
 </body>
