--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -19,4 +19,17 @@ h1 {
    padding: 5px;
    height: 200px;
  }
+p{
+  
+  text-align: center;
+}
+.jumbotron{
+   
+   height:200px;
+}
+h3{
+   
+   /*text-align: center;*/
+
+}
 
