--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,24 @@
-<h1>Welcome#index hellya!</h1>
-<p id="index-title">This is the home page for Bloccit.</p>
+<br/>
+<p id = "title"><strong>KnowledgeBank:</strong> Social Markdown Wikis<p/>
+ 
+<div class="jumbotron">
+ <!-- <h1>Bloccit</h1> -->
+  <p>create and share markdown wikis</p>
+  <p>
+      <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or 
+      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+  </p>
+</div>
 
- <div class="posts">Post 1 goes here.</div>
- <div class="posts">Post 2 goes here.</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <h3>Create as many public wikis as you want</h3>
+    <span><%= link_to "Free Plan", "#", class: 'glyphicon glyphicon-star' %></span>
+  </div>
+  <div class="col-md-6">
+    <h3>Create private wikis</h3>
+    <span><%= link_to "Free Plan", "#", class: 'glyphicon glyphicon-star-empty' %></span>
+  </div>
+</div>
+ 
