--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,2 +1,27 @@
-<h1>Wikis#new</h1>
-<p>Find me in app/views/wikis/new.html.erb</p>
+<h1>New Wiki</h1>
+ <div class= "row">
+   <div class = "col-md-4">
+     <p>Guidlines for wikis</p>
+     <ul>
+       <li>Keep it clean</li>
+       <li>Keep it safe</li>
+       <li>Keep it classy Sandiego </li>
+     </ul>
+   </div>
+ </div>
+<div class = "col-md-8">
+  <%= form_for @wiki do |f| %>
+    <div class = "form-group">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: 'form-control', placeholder: "Enter wiki title" %>
+    </div>
+    <div class = "form-group">
+      <%= f.label :body %>
+      <%= f.text_area :body, rows:20, class: 'form-control', placeholder:"write your wiki here" %>
+    </div>
+    <div class = "form-group">
+      <%= f.submit class: 'btn btn-success' %>
+    </div>
+  <% end %>
+  </div>
+</div>
