--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -5,6 +5,9 @@
     <div class = "media-heading">
        <p><%= link_to wiki.title, wiki_path(wiki.id)%></p>
      </div>
+     <small>
+      submitted <%= time_ago_in_words(wiki.created_at) %> ago by <%= wiki.user.name %><br/>
+     </small>
    </div>
  </div>
 <%end%>
