--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -20,6 +20,11 @@
          <%= f.text_area :body, rows: 20, class: 'form-control', placeholder: "Enter post body" %>
        </div>
        <div class="form-group">
+        <%= f.label :public, class: 'checkbox' do %>
+          <%= f.check_box :public %> Public wiki
+        <% end %>
+      </div>
+       <div class="form-group">
          <%= f.submit "Save", class: 'btn btn-success' %>
        </div>
      <% end %>
