--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,4 +1,7 @@
+<%if policy(@wiki).show? %>
 <h1><%= markdown @wiki.title %></h1>
-<%= link_to "Edit", edit_wiki_path(@wiki), class: "btn btn-success" %>
+<%if policy(@wiki).edit? %>
+ <%= link_to "Edit", edit_wiki_path(@wiki), class: "btn btn-success" %>
+<% end %>
 <p><%= markdown @wiki.body %></p>
-
+<% end %>
