--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -30,3 +30,10 @@
      <% end %>
    </div>
  </div>
+ 
+<%= render partial: "collaborations/new", locals: { wiki: @wiki, collaboration: @collaboration} %>
+
+
+<!-- render current collaborats + button to remove them -->
+
+ <!-- render collaborator add form -->
