--- a/app/views/wikis/collaboration.html.erb
+++ b/app/views/wikis/collaboration.html.erb
@@ -13,8 +13,7 @@
    </div>
  </div>
 <div class = "col-md-8">
-  <%= form_for @
-   do |f| %>
+  <%= form_for @collaboration do |f| %>
     <div class = "form-group">
       <%= f.label :user_id %>
       <%= f.text_field :user_id, class: 'form-control', placeholder: "Enter name" %>
