--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -19,20 +19,22 @@
          <%= f.label :body %>
          <%= f.text_area :body, rows: 20, class: 'form-control', placeholder: "Enter post body" %>
        </div>
-       <div class="form-group">
-        <%= f.label :public, class: 'checkbox' do %>
-          <%= f.check_box :public %> Public wiki
-        <% end %>
-      </div>
+       <%if policy(@wiki).edit_form_settings? %>
+         <div class="form-group">
+          <%= f.label :public, class: 'checkbox' do %>
+            <%= f.check_box :public %> Public wiki
+          <% end %>
+        </div>
+      <% end %>
        <div class="form-group">
          <%= f.submit "Save", class: 'btn btn-success' %>
        </div>
      <% end %>
    </div>
  </div>
- 
+<%if policy(@wiki).edit_form_settings? %>
 <%= render partial: "collaborations/new", locals: { wiki: @wiki, collaboration: @collaboration} %>
-
+<% end %>
 
 <!-- render current collaborats + button to remove them -->
 
