--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -3,24 +3,32 @@
 <%if policy(@wiki).edit? %>
  <%= link_to "Edit", edit_wiki_path(@wiki), class: "btn btn-success" %>
 <% end %>
+<%if policy(@wiki).edit_form_settings? && policy(@wiki).edit?%>
+    <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %> 
+<%end%>
 <p><%= markdown @wiki.body %></p>
 <% end %>
 
 <!-- render current collaborats -->
-<%= @collaborators.to_a %>
+<%= @collaborations.to_a %>
 
 <p><strong>list of collaborators</strong></p>
 
 <!-- render collaborators with kainari pagination -->
-<% @collaborators.each do |collaborator| %> 
+<% @collaborations.each do |collaboration| %> 
+<% raise if collaboration.user_id.nil? %>
+
+
 <div class = "media">
   <div class = "media-body">
-    <div id = "collaboration-<%= collaborator.id %>" class = "media-heading">
-       <p><%= User.find(collaborator.user_id).name%></p>
-
-          <%= link_to "Delete", wiki_collaboration_path(@wiki, collaborator), method: :delete,remote: true %>
+    <div id = "collaboration-<%= collaboration.id %>" class = "media-heading">
+       <p><%= User.find(collaboration.user_id).name%></p>
+        <%if policy(@wiki).edit_form_settings? && policy(@wiki).edit?%>
+          <%= link_to "Delete", wiki_collaboration_path(@wiki, collaboration), method: :delete,remote: true %>
+        <%end%>
      </div>
    </div>
  </div>
 <%end%>
 
+<%= paginate @collaborations %>
