--- a/app/views/collaborations/_new.html.erb
+++ b/app/views/collaborations/_new.html.erb
@@ -1,16 +1,31 @@
-<%= form_for [wiki, collaboration] do |f| %>
+<%= form_for [wiki, collaboration] do |f|%>
  
 <div class = "col-md-8">
  
     <div class = "form-group">
       <%= f.label :user_name %>
-      <%= f.text_field :user_name, class: 'form-control', placeholder: "Enter name" %>
+      <%= f.text_field :user_name, class: 'form-control', placeholder: "Enter name"  %>
   
     </div>
     <div class = "form-group">
       <%= f.submit class: 'btn btn-success' %>
     </div>
   </div>
+ 
+    <div id="user_data" class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+    Dropdown
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+    <!-- <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+    <li role="presentation" class="divider"></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li> -->
+  </ul>
+</div>
+ 
 </div>
 
   </div>
