--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
   <div class= "container">
     <ul class = "nav nav-tabs">
       <li><%= link_to "home", root_path %></li>
-      <li><%= link_to "index", welcome_about_path %></li>
-
+      <li><%= link_to "wikis", wikis_path %></li>
+      <% if current_user %>
+       <li><%= link_to "my wikis", user_path(current_user.id.to_s) %></li>
+      <% end %>
       <div class = "pull-right user-info">
         <% if current_user %>
           Hello <%= current_user.name || current_user.email %> <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
