--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,51 @@
 <%if policy(@user).show? %>
   <h1>Users#show</h1>
   <p>Find me in app/views/users/show.html.erb</p>
-  <ul>
-  <% @wikis.each do |wiki| %> 
-  <div class = "media">
-    <div class = "media-body">
-      <div class = "media-heading">
-         <p><%= link_to wiki.title, wiki_path(wiki.id)%></p>
-       </div>
-       <small>
-       </small>
-     </div>
-   </div>
-  <%end%>
+  <div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading">List of My Wikis</div>
 
-  </ul>
+  <!-- Table -->
+  <table class="table">
+    <THEAD>
+    <TR>
+      <TH SCOPE=col ROWSPAN=2>Wiki</TH>
+      <TH SCOPE=col ROWSPAN=2>time Submitted</TH>
+    </TR>
+  </THEAD>
+  <!-- <TBODY>
+    <TR>
+      <TD SCOPE=row>non-breaking space</TD>
+      <TD>&amp;nbsp;</TD>
+      <TD>&amp;#160;</TD>
+      <TD>&amp;#xA0;</TD>
+      <TD>&nbsp;</TD>
+      <TD>&#160;</TD>
+      <TD>&#xA0;</TD>
+    </TR>
+  </TBODY> -->
+  
+<% @wikis.each do |wiki| %> 
+<!-- <div class = "media">
+  <div class = "media-body">
+    <div class = "media-heading"> -->
+      <TBODY>
+        <TR>
+          <TD>
+            <p><%= link_to wiki.title, wiki_path(wiki.id)%></p>
+          </TD>
+             <!-- </div> -->
+            <!--  <small> -->
+            <TD>
+              <%= time_ago_in_words(wiki.created_at) %> ago 
+            </TD>
+        </TR>
+   <!-- </div>
+ </div> -->
+    </TBODY>
+<%end%>
+</table>
+</div>
+
+
 <%end%>
