--- a/app/assets/javascripts/collaborations.js.erb
+++ b/app/assets/javascripts/collaborations.js.erb
@@ -1,32 +1,34 @@
+
 $(document).ready(function()
 {
 
 
      $('#collaboration_user_name').on('keyup', function() { 
      
-       text = $(this).val();
+      text = $(this).val();
       // alert(text);
      
-       $.ajax({ url: "/collaborations?collaboration="+text, 
-       beforeSend: function( xhr ) { 
-        xhr.overrideMimeType( "text/plain; charset=x-user-defined" ); 
-      } 
-     }).done(function( data ) {
-     //alert("test");
-      if( console && console.log ) { 
-        console.log( "Sample of data:", data.slice( 0, 1000 ) ); 
-          users = JSON.parse(data.slice( 0, 1000 ))
-         // alert(users[0].name);
-          $("#user_data ul li").remove();
-          $.each( users, function( index, value ) {
-            $("#user_data ul").append("<li role='presentation'>"+"<a role='menuitem' tabindex='-1' href='#'>"+users[index].name+ ", " +users[index].email+"</a>"+"</li>"); 
-          });
-         // $("#user_data").append("<p>"+users[0].name+"</p>");
-<%@user = "data.slice(0,1000)"%>
-$("#user_data").append(<%=@user.class%>);
-      }   
+      $.ajax({ url: "/collaborations?collaboration="+text, 
+        beforeSend: function( xhr ) { 
+          xhr.overrideMimeType( "text/plain; charset=x-user-defined" ); 
+        } 
+      }).done(function( data ) {
+        console.log( "data:", data ); 
+        users = JSON.parse(data);
 
+        $("#user_data ul li").remove();
+        $.each( users, function( index, value ) {
+          $("#user_data ul").append("<li class='list-group-item' value ="+ users[index].id+">"+users[index].name+ ", " +users[index].email+ "</li>"); 
+        });
+      <% @user = "data" %>;
+        $("#user_data").append(JSON.parse(data).name);
+        $(' .list-group-item').click(function() {
+        //alert( $(this).val() );
+            $('#collaboration_user_name').val($(this).text().split(",")[0]);
+           $('#collaboration_user_id').val($(this).val());
+      });
     });
-
  });
+
+     
 });
