--- a/app/views/collaborations/_new.html.erb
+++ b/app/views/collaborations/_new.html.erb
@@ -13,18 +13,13 @@
   </div>
  
     <div id="user_data" class="dropdown">
-  <ul class="list-group" style= "width:50%">
-    <!-- <li class="list-group-item">Cras justo odio</li>
-    <li class="list-group-item">Dapibus ac facilisis in</li>
-    <li class="list-group-item">Morbi leo risus</li>
-    <li class="list-group-item">Porta ac consectetur ac</li>
-    <li class="list-group-item">Vestibulum at eros</li> -->
-  </ul>
+  <ul class="list-group" style= "width:50%"></ul>
 </div>
- 
+
 </div>
 
   </div>
 
 </div>
 <%end%>
+<%= render partial: "collaborations/show", locals: { wiki: @wiki, collaboration: @collaboration} %>
