added name unobtrusive javascript and commented out postgres gem

--- a/app/views/collaborations/_form.html.erb
+++ b/app/views/collaborations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [wiki, collaboration] do |f| %>
+<%= form_for [wiki, collaboration], remote:true do |f| %>
   <h1>Collaboration</h1>
 
      
