--- a/app/views/collaborations/_new.html.erb
+++ b/app/views/collaborations/_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [wiki, collaboration] do |f|%>
+<%= form_for [wiki, collaboration], remote:true  do |f|%>
  
 <div class = "col-md-8">
  
@@ -22,4 +22,4 @@
 
 </div>
 <%end%>
-<%= render partial: "collaborations/show", locals: { wiki: @wiki, collaboration: @collaboration} %>
+<%= render partial: "collaborations/show", locals: { wiki: wiki, collaboration: collaboration} %>
