--- a/app/views/collaborations/create.js.erb
+++ b/app/views/collaborations/create.js.erb
@@ -1,6 +1,6 @@
 alert("hello");
 alert("<%= @collaborationname %>" );
 if( document.getElementById("collaborations-<%= @collaboration.id %>" ) === null ) {
- $('#new_collaboration').append('<div id="collaborations-"'
-    + <%= @collaboration.id %> + ">" + "<%=  @collaborationname %></div>");
+$('#collaboration_show').append('<div class = "media"><div class = "media-body">'+'<div id=collaborations-' + <%= @collaboration.id %> + " class = 'media-heading'>" +"<p>"+ "<%=  @collaborationname %></p>"+'<%= link_to "Delete", wiki_collaboration_path(@wiki, @collaboration), method: :delete,remote: true %>'+ '</div></div></div>');
 }
+
