added ajax functionality

--- a/app/views/user_plans/update_plan.html.erb
+++ b/app/views/user_plans/update_plan.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="col-md-6">
     <p>Create private wikis</p>
-    <span><%= link_to "Free Plan", "#", class: 'glyphicon glyphicon-star-empty' %></span>
+    <span><%= link_to "Membership Plan", new_charge_path, class: 'glyphicon glyphicon-star-empty' %></span>
   </div>
 </div>
- 
+
