--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -19,11 +19,13 @@
       <%= f.label :body %>
       <%= f.text_area :body, rows:20, class: 'form-control', placeholder:"write your wiki here" %>
     </div>
+    <%if policy(@wiki).paid_user_perks?%>
     <div class="form-group">
         <%= f.label :public, class: 'checkbox' do %>
           <%= f.check_box :public %> Public wiki
         <% end %>
     </div>
+    <% end %>
     <div class = "form-group">
       <%= f.submit class: 'btn btn-success' ,id: 'wiki_submit'  %>
     </div>
