--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,12 +13,16 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h3>Create as many public wikis as you want</h3>
+    <h3>Free Plan</h3>
     <span><%= link_to "Free Plan", "#", class: 'glyphicon glyphicon-star' %></span>
+    <div>Create public wikis</div>
+    <div>Share your articles to the world!</div>
   </div>
   <div class="col-md-6">
-    <h3>Create private wikis</h3>
+    <h3>Paid Plan</h3>
     <span><%= link_to "Free Plan", "#", class: 'glyphicon glyphicon-star-empty' %></span>
+    <div>create private wikis</div>
+    <div>add collaborators</div>
   </div>
 </div>
  
